Avoid large layout shifts

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     color: white;
     font-family: 'Archivo Black', sans-serif;
     line-height: 1.6;
+    font-display: swap;
 }
 
 a {
@@ -455,12 +456,20 @@ th {
 
 /* Весь інший CSS залишаємо без змін */
 
-.youtube-player {
+.video-container {
     position: relative;
     width: 100%;
     height: 0;
     padding-bottom: 56.25%;
     /* 16:9 */
+}
+
+.youtube-player {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-color: black;
     background-size: cover;
     cursor: pointer;
